# prepare-mesa-workdir

./: .gitignore  build_in_oglshell.sh  configure.ac  gluconf.sh  jhbuildconf.sh  jhbuildrc  jhbuildrc.in  mesaconf.sh  oglshell.sh  packages  piglitconf.sh  prepare.sh  variables.sh  variables.sh.in
fedora/: bashfile.sh  install_pkgs.sh
